# sip-server-rust

./: Cargo.toml
res/: home.html
src/: http.rs  logger.rs  main.rs  sip.rs  users_collection.rs
