[package]
name = "sip_server"
version = "0.0.1"
authors = ["rolledm <rolledm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.1"
bson = "0.14.0"
sip_rld = "0.3.0"
lazy_static = "1.4.0"
chrono = "0.4.11"